# next_HI

./: README.md  backup.cpp  commands.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/next_motor_interface/lib/next_motor_interface/: kinco_lift_node3_std
install/next_motor_interface/share/next_motor_interface/: kinco_hardware_interface.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/next_motor_interface/share/next_motor_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_next_motor_interface__rosidl_generator_cppExport.cmake  export_next_motor_interface__rosidl_generator_pyExport-noconfig.cmake  export_next_motor_interface__rosidl_generator_pyExport.cmake  export_next_motor_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  (+10 more)
log/: latest_build
src/next_motor_interface/: CMakeLists.txt  kinco_hardware_interface.xml  package.xml
src/next_motor_interface/config/: lift_node3.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam.rviz
src/next_motor_interface/config/bus_can0/: bus.yml  ros2_controllers.yaml
src/next_motor_interface/launch/: lift_node3.launch.py  localization.launch.py  nav2.launch.py  robot_control.launch.py  slam.launch.py
src/next_motor_interface/maps/: README.md
src/next_motor_interface/rviz/: nav2.rviz
src/next_motor_interface/src/: kinco_hardware_interface.cpp  kinco_lift_node3_std.cpp
src/next_motor_interface/urdf/: face.xacro  gazebo_control.xacro  lidar copy.xacro  lidar.xacro  robot.urdf.xacro  robot_core copy 2.xacro  robot_core copy.xacro  robot_core.xacro  ros2_control_kinco.xacro  ros2_control_mock.xacro
(+70 files in other folders)
